# glpkxx

./: .gitignore  CMakeLists.txt  glpkxx.cpp  glpkxx.h  library.h  readme.md  test  test.cpp
doc/: contributing.md
